fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Feedback__c/CX_Sales_Rep_Feedback__c.object-meta.xml
<CustomObject>
    <label>CX Sales Rep Feedback</label>
    <nameField>
        <displayFormat>SF-{00000}</displayFormat>
        <label>CX Sales Rep Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CX Sales Rep Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>