fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Feedback__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>TEXT( Sales_Rep__r.Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>