fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Feedback__c/fields/Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email__c</fullName>
    <formula>Sales_Rep__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Email</label>
    <type>Text</type>
</CustomField>