fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Feedback__c/fields/Survey_Key__c.field-meta.xml
<CustomField>
    <fullName>Survey_Key__c</fullName>
    <label>Survey Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>