fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Feedback__c/fields/Total_Correct__c.field-meta.xml
<CustomField>
    <fullName>Total_Correct__c</fullName>
    <label>Total Correct</label>
    <summaryFilterItems>
        <field>CX_Sales_Rep_Account__c.Yes__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CX_Sales_Rep_Account__c.CX_Sales_Rep_Feedback__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>