fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Feedback__c/fields/Total_Correct_percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Correct_percentage__c</fullName>
    <formula>TEXT( (Total_Correct__c /  (Total_Correct__c + Total_Incorrect__c)) * 100) + &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Correct %</label>
    <type>Text</type>
</CustomField>