fullSandbox11072023/force-app/main/default/objects/CX_Sales_Rep_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>